hphp/test/zend/bad/Zend/tests/exception_handler_001.php
<?php

set_exception_handler("foo");

function foo($e) {
	var_dump(get_class($e)." thrown!");
}

class test extends Exception {
}

throw new test();

echo "Done\n";
?>